compiler/tests/fail/arm-m4/add_shift.jazz
export
fn main(reg u32 x, reg u32 y) -> reg u32 {
  reg u32 z;
  z = x + (y << 50);
  return z;
}
